// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`drop mark and link 1`] = `
[
  {
    "from": 84,
    "slice": {
      "content": [
        {
          "text": "Bold text. ",
          "type": "text",
        },
      ],
    },
    "stepType": "replace",
    "to": 95,
  },
  {
    "from": 95,
    "slice": {
      "content": [
        {
          "text": "Link.",
          "type": "text",
        },
      ],
    },
    "stepType": "replace",
    "to": 100,
  },
]
`;

exports[`drop mark and link and change text within mark 1`] = `
[
  {
    "from": 70,
    "slice": {
      "content": [
        {
          "text": "Hi",
          "type": "text",
        },
      ],
    },
    "stepType": "replace",
    "to": 75,
  },
  {
    "from": 84,
    "slice": {
      "content": [
        {
          "text": "Bold",
          "type": "text",
        },
      ],
    },
    "stepType": "replace",
    "to": 88,
  },
  {
    "from": 88,
    "slice": {
      "content": [
        {
          "text": " the",
          "type": "text",
        },
      ],
    },
    "stepType": "replace",
    "to": 88,
  },
  {
    "from": 88,
    "slice": {
      "content": [
        {
          "text": " text. ",
          "type": "text",
        },
      ],
    },
    "stepType": "replace",
    "to": 95,
  },
  {
    "from": 95,
    "slice": {
      "content": [
        {
          "text": "Link.",
          "type": "text",
        },
      ],
    },
    "stepType": "replace",
    "to": 100,
  },
]
`;

exports[`plain source block, add mention 1`] = `
[
  {
    "from": 10,
    "slice": {
      "content": [
        {
          "attrs": {
            "user": "Jane Doe",
          },
          "type": "mention",
        },
      ],
    },
    "stepType": "replace",
    "to": 15,
  },
]
`;

exports[`remove column 1`] = `
[
  {
    "from": 33,
    "stepType": "replace",
    "to": 49,
  },
  {
    "from": 83,
    "stepType": "replace",
    "to": 104,
  },
  {
    "from": 72,
    "slice": {
      "content": [
        {
          "text": "Table Cell ",
          "type": "text",
        },
      ],
    },
    "stepType": "replace",
    "to": 104,
  },
  {
    "from": 123,
    "stepType": "replace",
    "to": 139,
  },
]
`;

exports[`remove row 1`] = `
[
  {
    "from": 67,
    "stepType": "replace",
    "to": 122,
  },
]
`;

exports[`standard update 1`] = `
[
  {
    "from": 4,
    "slice": {
      "content": [
        {
          "text": "a",
          "type": "text",
        },
      ],
    },
    "stepType": "replace",
    "to": 5,
  },
  {
    "from": 10,
    "slice": {
      "content": [
        {
          "text": "welt",
          "type": "text",
        },
      ],
    },
    "stepType": "replace",
    "to": 15,
  },
]
`;

exports[`styles + ic in source block, remove mark 1`] = `
[
  {
    "from": 34,
    "slice": {
      "content": [
        {
          "text": "are you doing? ",
          "type": "text",
        },
      ],
    },
    "stepType": "replace",
    "to": 49,
  },
]
`;

exports[`styles + ic in source block, remove mention 1`] = `
[
  {
    "from": 25,
    "stepType": "replace",
    "to": 28,
  },
]
`;

exports[`styles + ic in source block, replace content 1`] = `
[
  {
    "from": 27,
    "slice": {
      "content": [
        {
          "text": "updated content",
          "type": "text",
        },
      ],
    },
    "stepType": "replace",
    "to": 66,
  },
]
`;

exports[`styles + ic in source block, update mention prop 1`] = `
[
  {
    "from": 27,
    "slice": {
      "content": [
        {
          "attrs": {
            "user": "Jane Doe",
          },
          "type": "mention",
        },
      ],
    },
    "stepType": "replace",
    "to": 28,
  },
]
`;

exports[`styles + ic in source block, update text 1`] = `
[
  {
    "from": 21,
    "slice": {
      "content": [
        {
          "text": "a",
          "type": "text",
        },
      ],
    },
    "stepType": "replace",
    "to": 22,
  },
  {
    "from": 30,
    "slice": {
      "content": [
        {
          "text": "Wie ",
          "type": "text",
        },
        {
          "marks": [
            {
              "type": "bold",
            },
          ],
          "text": "geht es dir? ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "stringValue": "blue",
              },
              "type": "textColor",
            },
          ],
          "text": "Ich fühle mich blau",
          "type": "text",
        },
      ],
    },
    "stepType": "replace",
    "to": 65,
  },
]
`;

exports[`styles + ic in target block, add mark (paragraph) 1`] = `
[
  {
    "from": 3,
    "slice": {
      "content": [
        {
          "marks": [
            {
              "type": "bold",
            },
          ],
          "text": "Hello, world!",
          "type": "text",
        },
      ],
    },
    "stepType": "replace",
    "to": 16,
  },
]
`;

exports[`styles + ic in target block, add mark (word) 1`] = `
[
  {
    "from": 10,
    "slice": {
      "content": [
        {
          "marks": [
            {
              "type": "bold",
            },
          ],
          "text": "world!",
          "type": "text",
        },
      ],
    },
    "stepType": "replace",
    "to": 16,
  },
]
`;

exports[`update block prop 1`] = `
[
  {
    "from": 2,
    "slice": {
      "content": [
        {
          "attrs": {
            "textAlignment": "right",
          },
          "type": "paragraph",
        },
      ],
      "openEnd": 1,
    },
    "stepType": "replace",
    "structure": true,
    "to": 3,
  },
]
`;

exports[`update block prop and content 1`] = `
[
  {
    "from": 2,
    "slice": {
      "content": [
        {
          "attrs": {
            "textAlignment": "right",
          },
          "type": "paragraph",
        },
      ],
      "openEnd": 1,
    },
    "stepType": "replace",
    "structure": true,
    "to": 3,
  },
  {
    "from": 3,
    "slice": {
      "content": [
        {
          "text": "What's up",
          "type": "text",
        },
      ],
    },
    "stepType": "replace",
    "to": 8,
  },
]
`;

exports[`update block type 1`] = `
[
  {
    "from": 2,
    "slice": {
      "content": [
        {
          "attrs": {
            "level": 1,
            "textAlignment": "left",
          },
          "type": "heading",
        },
      ],
      "openEnd": 1,
    },
    "stepType": "replace",
    "structure": true,
    "to": 3,
  },
]
`;

exports[`update block type and content 1`] = `
[
  {
    "from": 2,
    "slice": {
      "content": [
        {
          "attrs": {
            "level": 1,
            "textAlignment": "left",
          },
          "content": [
            {
              "text": "What's up",
              "type": "text",
            },
          ],
          "type": "heading",
        },
      ],
      "openEnd": 1,
    },
    "stepType": "replace",
    "to": 8,
  },
]
`;

exports[`update table cell 1`] = `
[
  {
    "from": 6,
    "slice": {
      "content": [
        {
          "text": "Hello, world!",
          "type": "text",
        },
      ],
    },
    "stepType": "replace",
    "to": 18,
  },
]
`;
